new width on upper right

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     </div>
                     <div class="input">
                         <label for="password">Password</label>
-                        <input type="text" id="password" name="password" class="hide">
+                        <input type="password" id="password" name="password" class="hide">
                         <p id="password-alert" class="hide">* Passwords do not match</p>
                     </div>
                     <div class="input">
                         <label for="conf-password">Confirm Password</label>
-                        <input type="text" id="conf-password" name="conf-password" class="hide">
+                        <input type="password" id="conf-password" name="conf-password" class="hide">
                     </div>
                 </div>
             </div>
